--- a/package.json
+++ b/package.json
@@ -6,6 +6,25 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "async": "^3.2.4",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
+    "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "fs": "*",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "multer": "*",
+    "pug": "^3.0.2",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
