--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=lecture-blog:* npm run devstart"
   },
   "dependencies": {
     "async": "^3.2.4",
@@ -18,7 +20,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "luxon": "^3.3.0",
-    "mongoose": "^7.0.3",
+    "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "multer": "*",
     "pug": "^3.0.2",
